spade-tests/src/snapshots/spade_tests__ast_lowering__declaration_without_definition_triggers_error.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Declared variable is not defined
  ┌─ testinput:2:10
  │
2 │     decl x;
  │          ^ This variable is declared but not defined
  │
  = help: Consider defining x with a let or reg binding


